Fix z-index

--- a/src/views/SplashPage_v2/index.css
+++ b/src/views/SplashPage_v2/index.css
@@ -46,7 +46,7 @@
   width: 67%;
   max-width: 700px;
   height: 87%;
-  z-index: 2;
+  z-index: 3;
   animation: imgFadeIn 2s;
   grid-row-start: 5;
   grid-row-end: 16;
@@ -58,7 +58,7 @@
   width: 100%;
   max-width: 489px;
   height: 100%;
-  z-index: 1;
+  z-index: 2;
   animation: fadeIn 1.5s;
   grid-row-start: 5;
   grid-row-end: 16;
@@ -73,6 +73,7 @@
   grid-row-start: 16;
   grid-column-start: 10;
   grid-column-end: 16;
+  z-index: 3;
 }
 
 .capsules {
@@ -89,7 +90,7 @@
   padding: 0.5em 0.5em 0.5em 1em;
   font-size: min(3.3vw, 0.6em);
   white-space: nowrap;
-  z-index: 3;
+  z-index: 4;
   gap: 1em;
   animation: imgFadeIn 2.5s;
 }
